--- a/doc/misc.bib
+++ b/doc/misc.bib
@@ -194,3 +194,12 @@
   howpublished = {\url{http://pngu.mgh.harvard.edu/~purcell/plink/data.shtml}}
 }
 
+@book{c++_primer,
+  title={C++ Primer},
+  author={Lippman, Stanley B and Lajoie, Jos{\'e}e and Moo, Barbara E},
+  year={2012},
+  edition={fifth},
+  publisher={Addison-Wesley}
+}
+
+
