--- a/doc/statistics.bib
+++ b/doc/statistics.bib
@@ -431,5 +431,27 @@ howpublished = {\url{http://on-demand.gputechconf.com/gtc/2013/presentations/S31
   publisher={Elsevier}
 }
 
+@article{snpsyn,
+  title={SNPsyn: detection and exploration of SNP--SNP interactions},
+  author={Curk, Tomaz and Rot, Gregor and Zupan, Blaz},
+  journal={Nucleic acids research},
+  volume={39},
+  number={suppl 2},
+  pages={W444--W449},
+  year={2011},
+  publisher={Oxford Univ Press}
+}
+
+@article{snpsyn_gpu_mic,
+  title={Heterogeneous computing architecture for fast detection of SNP-SNP interactions},
+  author={Sluga, Davor and Curk, Tomaz and Zupan, Blaz and Lotric, Uros},
+  journal={BMC bioinformatics},
+  volume={15},
+  number={1},
+  pages={216},
+  year={2014},
+  publisher={BioMed Central Ltd}
+}
+
 
 
